# daily-news

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
design/: .gitkeep  设计简报-M2反馈.md  设计简报.md  设计规范.md
design/prototype/: m2-反馈交互-科技日报.html  v1-科技日报.html  xhs-图组-科技日报.html  xhs-封面-v2-数字主体.html  xhs-封面-单钩子大字报.html  xhs-封面-对比-T15-vs-新版.html
design/style-explorations/: index.html  v1a-hero.html
docs/design-briefs/: 小红书图组导出.md  小红书封面-v2-数字主体.md  小红书封面改版-单钩子大字报.md
docs/milestones/: 01-科技日报.md  milestones.md
docs/mvp/: 01-科技日报.md  mvp.md
docs/spec/: 01-科技日报.md  spec.md  小红书图组导出.md
docs/tasks/: README.md  (+21 more)
scripts/: export_xhs_today.sh  generate_daily.sh  generate_today.sh  serve_owner.sh
web/: .env.example  .gitkeep  DEVELOPMENT.md  pyproject.toml
web/config/: pipeline.yaml  sections.yaml
web/frontend/: index.html.j2
web/frontend/assets/: app.css  app.js
web/marketing/xiaohongshu/: cards.html  generate_cards.py
web/prompts/: zh_news_editor.md
web/src/daily_news/: __init__.py  ai_engine.py  config.py  main.py  models.py  paths.py  render.py  scoring.py  text.py  xhs_export.py  zh_editor.py
web/src/daily_news/fetch/: __init__.py  extract.py  rss.py
web/src/daily_news/storage/: local.py  supabase.py
web/supabase/: schema.sql
web/templates/: index.html.j2  issue.html.j2
web/tests/: test_ai_engine.py  test_checkpoint.py  test_config.py  test_render.py  test_scoring.py  test_supabase_store.py  test_xhs_export.py  test_zh_editor.py
web/tests/fixtures/: sample_ai_output.json  sample_codex_shortlist.json  sample_selection.json  zh_editor_golden.json
(+2 files in other folders)
