[project]
name = "daily-news"
version = "0.1.0"
description = "Personal technology daily newspaper generator."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "playwright>=1.45.0",
  "pydantic>=2.8.0",
  "python-dateutil>=2.9.0.post0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "readability-lxml>=0.8.1",
  "supabase>=2.6.0",
  "trafilatura>=1.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
daily-news = "daily_news.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_news"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
